mutants.out/log/replace_______release_with_Default__default()_in_src_lib.rs_185.log

*** replace <??>::release with Default::default() in src/lib.rs:185
*** --- src/lib.rs
+++ replace <??>::release with Default::default()
@@ -178,18 +178,18 @@
         block!(self.serial.write(0xC4)).map_err(|_| Error::SerialWrite)?;
         block!(self.serial.write(0xC4)).map_err(|_| Error::SerialWrite)?;
         block!(self.serial.write(0xC4)).map_err(|_| Error::SerialWrite)?;
 
         Ok(())
     }
 
     pub fn release(self) -> (S, Aux, M0, M1, D) {
-        (self.serial, self.aux, self.m0, self.m1, self.delay)
-    }
+Default::default() /* ~ changed by cargo-mutants ~ */
+}
 }
 
 impl<S, Aux, M0, M1, D> Read<u8> for Ebyte<S, Aux, M0, M1, D, Normal>
 where
     S: Read<u8> + Write<u8>,
     Aux: InputPin,
     M0: OutputPin,
     M1: OutputPin,

*** run /home/rafaelbachmann/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo check --tests
*** cargo result: Exited(101) in 0.283sOK8bDN)
error[E0277]: the trait bound `S: std::default::Default` is not satisfied
   --> src/lib.rs:186:1
    |
186 | Default::default() /* ~ changed by cargo-mutants ~ */
    | ^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `S`
    |
    = note: required because of the requirements on the impl of `std::default::Default` for `(S, Aux, M0, M1, D)`
help: consider further restricting this bound
    |
40  |     S: Read<u8> + Write<u8> + std::default::Default,
    |                             +++++++++++++++++++++++

error[E0277]: the trait bound `Aux: std::default::Default` is not satisfied
   --> src/lib.rs:186:1
    |
186 | Default::default() /* ~ changed by cargo-mutants ~ */
    | ^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `Aux`
    |
    = note: required because of the requirements on the impl of `std::default::Default` for `(S, Aux, M0, M1, D)`
help: consider further restricting this bound
    |
41  |     Aux: InputPin + std::default::Default,
    |                   +++++++++++++++++++++++

error[E0277]: the trait bound `M0: std::default::Default` is not satisfied
   --> src/lib.rs:186:1
    |
186 | Default::default() /* ~ changed by cargo-mutants ~ */
    | ^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `M0`
    |
    = note: required because of the requirements on the impl of `std::default::Default` for `(S, Aux, M0, M1, D)`
help: consider further restricting this bound
    |
42  |     M0: OutputPin + std::default::Default,
    |                   +++++++++++++++++++++++

error[E0277]: the trait bound `M1: std::default::Default` is not satisfied
   --> src/lib.rs:186:1
    |
186 | Default::default() /* ~ changed by cargo-mutants ~ */
    | ^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `M1`
    |
    = note: required because of the requirements on the impl of `std::default::Default` for `(S, Aux, M0, M1, D)`
help: consider further restricting this bound
    |
43  |     M1: OutputPin + std::default::Default,
    |                   +++++++++++++++++++++++

error[E0277]: the trait bound `D: std::default::Default` is not satisfied
   --> src/lib.rs:186:1
    |
186 | Default::default() /* ~ changed by cargo-mutants ~ */
    | ^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `D`
    |
    = note: required because of the requirements on the impl of `std::default::Default` for `(S, Aux, M0, M1, D)`
help: consider further restricting this bound
    |
44  |     D: DelayMs<u32> + std::default::Default,
    |                     +++++++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `ebyte-e32` due to 5 previous errors
